# autosail

./: README.md  pyproject.toml  setup.cfg
examples/ensemble/: simple_regression.ipynb
examples/model_selection/: classification_model_selection.py  regression_model_selection.py
examples/models/auto_ml/: prequential_training.ipynb  sail_auto_pipeline_classification.ipynb  sail_auto_pipeline_regression.ipynb
examples/models/keras/: run_oslem.py  run_wglstm.ipynb
examples/models/native/: robust_iml_nonstationaryenv.py
examples/models/river/: bike_sharing_forecasting.ipynb  simple_classification.ipynb
examples/models/torch/: conv_net_classification.ipynb  inception_time.ipynb  lstm_fcn_classification.ipynb  onn_hbp_classification.ipynb  os_cnn_classification.ipynb  rnn_regression.py  tcn_regression.ipynb
examples/pipeline/: sail_pipeline_classification_keras.ipynb  sail_pipeline_classification_river.ipynb  sail_pipeline_classification_sklearn.ipynb  sail_pipeline_regression_keras.ipynb  sail_pipeline_regression_river.ipynb  sail_pipeline_regression_torch.ipynb
src/autosail/: __init__.py
src/autosail/common/: helper.py  scorer.py
src/autosail/drift_detection/: drift_detector.py
src/autosail/model_selector/: base.py
src/autosail/models/: base.py
src/autosail/pipeline/: pipeline.py
src/autosail/telemetry/: __init__.py  tracing.py
src/autosail/visualisation/: tensorboard.py
tests/model_selector/: test_model_selector_regressor.py
tests/pipeline/: conftest.py  test_sail_pipeline_classification.py  test_sail_pipeline_regression.py
(+58 files in other folders)
