[options]
install_requires =
    logzero
    dill 
    tqdm
    seaborn==0.12.2
    numpy>=1.23
    scipy>=1.10
    pandas>=2.0
    opentelemetry-api
    opentelemetry-sdk
    opentelemetry-exporter-otlp
    tensorboard>=2.11
    matplotlib==3.7.2
    scikit-learn>=1.2,<=1.3.2

[options.extras_require]
tensorflow_cpu =
    tensorflow-cpu>=2.7,<=2.13
    scikeras
    tensorflow-addons
tensorflow =
    tensorflow>=2.7,<=2.13
    scikeras
    tensorflow-addons
tensorflow_arm64 =
    tensorflow-macos>=2.7,<=2.13
    scikeras
    tensorflow-addons
pytorch =
    torch>=2.0
    skorch
river =
    river
ray =
    ray
    hyperopt
    tune_sklearn
dev =
    black
    pylint
tests = 
    pytest
    nbmake
    pytest-xdist
    pytest-console-scripts
examples =
    ipykernel
    plotly
    nbformat
    gdown
    liac-arff
all =
    autosail[tensorflow]
    autosail[pytorch]
    autosail[river]
    autosail[ray]
    autosail[dev]
    autosail[examples]
    autosail[tests]
